--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^5.1.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^5.0.1",
     "@types/node": "^22.14.0",
     "ts-node": "^10.9.2",
