test: add unit tests for portfolioController and stockController, including success and error handling scenarios.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
         "esModuleInterop": true,
         "skipLibCheck": true,
         "forceConsistentCasingInFileNames": true,
-        "rootDir": "./src",
+        "rootDir": "./",
         "outDir": "./dist",
         "resolveJsonModule": true,
         "noImplicitAny": true,
@@ -20,6 +20,6 @@
             "*": ["*"]
         }
     },
-    "include": ["src/**/*", "test/**/*", "config/**/*"],
+    "include": ["src/**/*", "test/**/*", "config/**/*", "src/api/v1/types/**/*"],
     "exclude": ["node_modules", "dist"]
 }
