--- a/.github/workflows/linting.yaml
+++ b/.github/workflows/linting.yaml
@@ -18,15 +18,16 @@ jobs:
                   node-version: "20.x"
 
             # Step 3: Install ESLint for development
-            - name: Install ESLint for development
-              run: npm install --save-dev eslint @eslint/js @types/eslint__js typescript typescript-eslint
+            - name: Install dependencies
+              run: npm ci
+
 
             # Step 4: Run ESLint with Reviewdog
             - name: Run ESLint with Reviewdog
               uses: reviewdog/action-eslint@v1
               with:
                   reporter: github-pr-review
-                  eslint_flags: "-c eslint.config.mjs **/*.{ts,tsx}"
+                  eslint_flags: "-c eslint.config.mjs src/**/*.{ts,tsx}"
                   level: error
               env:
                   REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
