--- a/.github/workflows/linting.yaml
+++ b/.github/workflows/linting.yaml
@@ -27,7 +27,7 @@ jobs:
               uses: reviewdog/action-eslint@v1
               with:
                   reporter: github-pr-review
-                  eslint_flags: "-c eslint.config.mjs src/**/*.{ts,tsx}"
+                  eslint_flags: "src/**/*.{ts,tsx}"
                   level: error
               env:
                   REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
