--- a/.github/workflows/linting.yaml
+++ b/.github/workflows/linting.yaml
@@ -3,6 +3,9 @@ on:
     pull_request:
         branches:
             - main
+permissions:
+  pull-requests: write
+
 jobs:
     lint:
         runs-on: ubuntu-latest
