fix(ci): switch to pull_request_target for reviewdog permissions

--- a/.github/workflows/linting.yaml
+++ b/.github/workflows/linting.yaml
@@ -1,6 +1,6 @@
 name: TypeScript Lint and Reviewdog
 on:
-    pull_request:
+    pull_request_target:
         branches:
             - main
 permissions:
