fix(ci): add push trigger to run linting after merge

--- a/.github/workflows/linting.yaml
+++ b/.github/workflows/linting.yaml
@@ -3,6 +3,10 @@ on:
     pull_request_target:
         branches:
             - main
+    push:
+        branches:
+            - main
+      
 permissions:
   pull-requests: write
 
