--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "firebase-admin": "^13.2.0",
     "node-cache": "^5.1.2",
     "node-cron": "^3.0.3",
+    "sentiment": "^5.0.2",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1"
   },
@@ -41,6 +42,7 @@
     "@types/jest": "^29.5.14",
     "@types/node": "^22.14.0",
     "@types/node-cron": "^3.0.11",
+    "@types/sentiment": "^5.0.4",
     "@types/supertest": "^6.0.3",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.8",
